# ROS2_workshop

Day1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Day1/install/day1_cpp/lib/day1_cpp/: simple_publisher  simple_subscriber  task1  task2  task2_2
Day1/install/day1_cpp/share/day1_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  (+2 more)
Day1/log/: latest_build  latest_list
Day1/src/day1_cpp/: CMakeLists.txt  package.xml
Day1/src/day1_cpp/src/: task1.cpp  task2.cpp  task2_2.cpp
Day1/src/day2_cpp/: CMakeLists.txt  package.xml
Day1/src/day3_cpp/: CMakeLists.txt  package.xml
Day2/install/: local_setup.sh  setup.sh
Day2/log/: latest_build
Day2/src/new_robot_controller/: CMakeLists.txt
Day2/src/new_robot_controller/src/: simple_controller.cpp
Day2/src/new_robot_description/: CMakeLists.txt
Day2/src/new_robot_description/launch/: gazebo.launch.py
Day2/src/new_robot_description/urdf/: ros2_control.xacro
Day2/src/robot_controller/: CMakeLists.txt  package.xml
Day2/src/robot_controller/config/: joy_teleop.yaml  robot_controllers.yaml
Day2/src/robot_controller/launch/: joystick_teleop.launch.py  simple_controller.launch.py
Day2/src/robot_controller/src/: simple_controller.cpp
Day2/src/robot_description/: CMakeLists.txt  package.xml
Day2/src/robot_description/launch/: display.launch.py  gazebo.launch.py  my_robot.launch.xml
Day2/src/robot_description/urdf/: base_robot_gazebo.xacro  camera.xacro  laser.xacro  my_robot.urdf.xacro  ros2_control.xacro
code/: .~lock.Untitled 1.odt#  Untitled 1.odt
(+22 files in other folders)
